<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu_lib_socket"
            android:title="@string/menu_lib_socket" />
        <item
            android:id="@+id/nav_menu_lib_tcp"
            android:title="@string/menu_lib_tcp" />
        <item
            android:id="@+id/nav_menu_lib_opencv"
            android:title="@string/menu_lib_opencv" />
        <item
            android:id="@+id/nav_menu_lib_yuv"
            android:title="@string/menu_lib_yuv" />
        <item
            android:id="@+id/nav_menu_lib_ftp_client"
            android:title="@string/menu_lib_ftp_client" />
        <item
            android:id="@+id/nav_menu_wifi"
            android:title="@string/menu_wifi" />

    </group>
</menu>